[package]
name = "infinitree-backends"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache -- backends"
version = "0.10.4"
keywords = ["crypto", "database", "cache", "s3", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"

[features]
default = []
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls-alpn"]

[dependencies]
infinitree = { version = "0.10.0", path = "../infinitree" }

serde = "1.0.167"
serde_derive = "1.0.167"

anyhow = "1.0.71"
scc = "1.8.3"
lru = "0.10.1"

rusty-s3 = { version = "0.4.1", default-features = false }
reqwest = { version = "0.11.18", default-features = false }
tokio = { version = "1.29.1", default-features = false, features = ["rt", "sync", "rt-multi-thread"] }
futures = "0.3.28"

[dev-dependencies]
infinitree = { version = "0.10.0", path = "../infinitree", features = ["test"] }
tokio = { version = "1.29.1", default-features = false, features = ["rt", "sync", "macros", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["server"] }
s3s = "0.6.1"
s3s-fs = "0.6.1"
