[package]
name = "infinitree-backends"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache -- backends"
version = "0.10.5"
keywords = ["crypto", "database", "cache", "s3", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"

[features]
default = []
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls-alpn"]

[dependencies]
infinitree = { version = "0.10.0", path = "../infinitree" }

serde = "1.0.193"
serde_derive = "1.0.193"

anyhow = "1.0.75"
scc = "2.0.4"
lru = "0.12.1"

rusty-s3 = { version = "0.5.0", default-features = false }
reqwest = { version = "0.11.22", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["rt", "sync", "rt-multi-thread"] }
futures = "0.3.29"

[dev-dependencies]
infinitree = { version = "0.10.0", path = "../infinitree", features = ["test"] }
tokio = { version = "1.34.0", default-features = false, features = ["rt", "sync", "macros", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["server"] }
s3s = "0.8.0"
s3s-fs = "0.8.0"
