[package]
name = "infinitree-backends"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache -- backends"
version = "0.10.6"
keywords = ["crypto", "database", "cache", "s3", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"

[features]
default = []
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls-alpn"]

[dependencies]
infinitree = { version = "0.10.0", path = "../infinitree" }

serde = "1.0.210"
serde_derive = "1.0.210"

anyhow = "1.0.89"
scc = "2.2.0"
lru = "0.12.4"

rusty-s3 = { version = "0.5.0", default-features = false }
reqwest = { version = "0.12.8", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["rt", "sync", "rt-multi-thread"] }
futures = "0.3.31"

[dev-dependencies]
infinitree = { version = "0.10.0", path = "../infinitree", features = ["test"] }
tokio = { version = "1.40.0", default-features = false, features = ["rt", "sync", "macros", "rt-multi-thread"] }
hyper = { version = "1.4.1", features = ["server"] }
hyper-util = { version = "0.1.9", features = ["server"] }
s3s = "0.10.1"
s3s-fs = "0.10.1"
