[package]
name = "infinitree-macros"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache"
version = "0.10.3"
keywords = ["crypto", "database", "cache", "sqlite", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"
readme="../README.md"

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "1.0.109"

[dev-dependencies]
infinitree = { path = "../infinitree", version = "0.10.0" }
serde = "1.0.167"

[lib]
proc-macro = true
