[package]
name = "infinitree-macros"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache"
version = "0.11.0"
keywords = ["crypto", "database", "cache", "sqlite", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"
readme="../README.md"

[dependencies]
proc-macro-crate = "^3"
proc-macro2 = "^1"
quote = "^1"
syn = "^2"

[dev-dependencies]
infinitree = { path = "../infinitree", version = "0.10.0" }
serde = "1.0.210"

[lib]
proc-macro = true
