[package]
name = "infinitree"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache"
version = "0.10.1"
keywords = ["crypto", "database", "cache", "sqlite", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"
build = "build.rs"
readme="../README.md"

[features]
default = ["mmap", "cryptobox", "yubikey"]
mmap = ["memmap2"]
cryptobox = ["libsodium-sys-stable"]
yubikey = ["yubico_manager"]
test = []
# internal use only
_test = ["test"]

[dependencies]
blake3 = "1.3.3"
ring = "0.16.20"
rust-argon2 = "1.0.0"
libsodium-sys-stable = { version = "1.19.27", features = ["minimal", "optimized"], optional = true }
yubico_manager = { version = "0.9.0", optional = true }

lz4_flex = { version = "0.10.0", default-features = false, features = ["safe-decode", "checked-decode", "frame"] }

scc = "1.6.3"
flume = "0.10.14"
lru = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
hex = "0.4.3"
parking_lot = "0.12.1"

serde = { version = "1.0.160", features = ["rc"] }
serde_derive = "1.0.160"
serde_with = "2.3.3"
rmp-serde = "1.1.1"

secrecy = "0.8.0"

infinitree-macros = { version = "0.10.0", path = "../infinitree-macros" }

memmap2 = { version = "0.5.10", optional = true }

[dev-dependencies]
criterion = "0.4.0"
paste = "1.0.12"

[[bench]]
name = "bench"
harness = false
path = "../benches/bench.rs"
