[package]
name = "infinitree"
authors = ["Peter Parkanyi <p@symmetree.dev>"]
description = "Embedded, encrypted database with tiered cache"
version = "0.11.0"
keywords = ["crypto", "database", "cache", "sqlite", "rocksdb"]
categories = ["database-implementations", "concurrency", "data-structures", "algorithms", "caching"]
homepage = "https://symmetree.dev"
repository = "https://github.com/symmetree-labs/infinitree"
license = "MIT OR Apache-2.0"
edition= "2021"
readme="../README.md"

[features]
default = ["mmap", "cryptobox", "yubikey"]
mmap = ["memmap2"]
cryptobox = ["libsodium-sys-stable"]
yubikey = ["yubico_manager"]
test = []
# internal use only
_test = ["test"]

[dependencies]
blake3 = "1.5.4"
ring = "0.17.8"
rust-argon2 = "2.1.0"
libsodium-sys-stable = { version = "1.21.2", features = ["minimal", "optimized"], optional = true }
yubico_manager = { version = "0.9.0", optional = true }

lz4_flex = { version = "0.11.3", default-features = false, features = ["safe-decode", "frame"] }

scc = "2.2.0"
flume = "0.11.0"
lru = "0.12.4"
thiserror = "1.0.64"
anyhow = "1.0.89"
hex = "0.4.3"
parking_lot = "0.12.3"

serde = { version = "1.0.210", features = ["rc", "derive"] }
serde_with = "3.11.0"
rmp-serde = "1.3.0"

secrecy = "0.10.2"

infinitree-macros = { version = "0.11.0", path = "../infinitree-macros" }

memmap2 = { version = "0.9.5", optional = true }
zeroize = {version = "1.8.1", features = ["simd", "derive"]}

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.15"

[[bench]]
name = "bench"
harness = false
path = "../benches/bench.rs"
